feature(policy): update openapi spec and update duplicate policy url
